fixed resposibility on mobile version

--- a/src/app/components/crowdfunding/crowdfunding.component.scss
+++ b/src/app/components/crowdfunding/crowdfunding.component.scss
@@ -26,7 +26,6 @@ div {
 
       mat-card {
         margin-bottom: 3%;
-        margin-right: 3%;
       }
     }
   }
