--- a/src/app/components/news/news.component.scss
+++ b/src/app/components/news/news.component.scss
@@ -1,9 +1,8 @@
 div.container {
   width: 95%;
+  margin: auto;
   margin-top: 3%;
-  margin-left: 4%;
   mat-card {
-    margin-right: 3%;
     margin-bottom: 3%;
   }
 }
